# magician_msgs

./: .gitignore  CMakeLists.txt  Makefile  README.md  package.xml  process_messages.py  requirements.txt
.github/workflows/: documentation.yml
docs/: common_msgs.md  conf.py  rt_services.md
msg/: Defect.msg  defect.msg
msg/motion_planning/: CartesianMotionPlan.msg  ControlMode.msg  SanderControl.msg
srv/motion_planning/: CartesianPlanExecution.srv  ExecuteTrajectory.srv  HoldPosition.srv  MeshDilation.srv  MeshPath.srv  MeshPointToPointMotion.srv  MeshPointToPointMotionPlan.srv  MeshReachPosition.srv  MoveRelative.srv  PointToPointMotion.srv  PointToPointMotionPlan.srv  PointToPointTime.srv  ReachPosition.srv  RhytmicDmpMotion.srv
srv/task_planning/: Orienteering.srv  deterministic_orienteering.srv
