cmake_minimum_required(VERSION 3.5)
project(magician_msgs)

find_package(ament_cmake REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(builtin_interfaces REQUIRED)
find_package(rosidl_default_generators REQUIRED)

rosidl_generate_interfaces(
    ${PROJECT_NAME}
    "msg/Defect.msg"
    "srv/task_planning/Orienteering.srv"
    DEPENDENCIES geometry_msgs
    builtin_interfaces std_msgs  
)

ament_export_dependencies(rosidl_default_runtime)
ament_package()
